incorporating bootstrap to html

--- a/index.html
+++ b/index.html
@@ -5,51 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cecilia's Basic Portfolio</title>
+
+    <title>Cecilia's Bootstrap Portfolio</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 
 <body>
-    <div class="container" id="box1">
 
-        <nav>
-            <a href="/Basic-Portfolio/contact.html">Contact</a>
-            <a href="/Basic-Portfolio/porfolio.html">Portfolio</a>
-            <a href="/Basic-Portfolio/index.html">About</a>
-        </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Cecilia Leon</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">About<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Portfolio</a>
+                <a class="nav-item nav-link" href="#">Contact</a>
+            </div>
+        </div>
+    </nav>
 
-        <div class="name">
-            <h1>Cecilia Leon</h1>
+    <div class="card">
+        <div class="card-header">
+            About Me
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+                <img src="assets/images/cecilia1.png">
+                <p>
+                    I'm a huge animal lover! And yes, I'm that awkward person at the party, who plays with the pets
+                    instead of socializing with the humans. Currently, I have two hamsters, Apple and Dalmation, one
+                    dog, Sage, and a rescued dove, Bubbles. Hopefully in a few months, I'll be welcoming a rescued Chinchilla into the
+                    mix.
+                    Every summer, Sage and I drive up to Montrose Dog Beach once a week to work on her swimming skills.
+                    We are working hard. As of last summer, she began to swim out with me, but if it gets too deep, I become
+                    her human surf board, which results in a ton of small scratches on my arms, shoulders, and legs. One day, Sage
+                    will be an Olympic swimmer if I have anything to do with it!
+                </p>
+                <footer class="blockquote-footer">Copyright©<cite>
+                </footer>
+            </blockquote>
         </div>
     </div>
 
 
-    <div class="container content">
-        <h2>About Me</h2>
-      
-        <img src="assets/images/cecilia1.png">
-
-        <p class="paragraphs">
-            I'm a huge animal lover! And yes, I'm that awkward person at the party, who plays with the pets instead of
-            socializing with the humans. Currently, I have two hamsters, Apple and Dalmation, one dog, Sage, and a
-            rescued dove, Bubbles. Hopefully in a few months, I'll be welcoming a rescued Chinchilla into the mix.
-        </p>
-
-        <p class="paragraphs">
-            Every summer, Sage and I drive up to Montrose Dog Beach once a week to work on her swimming skills. We are
-            working hard. As of last summer, she began to swim out with me, but if it gets too deep, I become her human
-            surf board, which results in a ton of small scratches on my arms, shoulders, and legs. One day, Sage will be
-            an Olympic swimmer if I have anything to do with it!
-        </p>
-
-        <div class="clearfix">
-
-        </div>
-    </div>
-
-    <footer>
-        <p>Copyright©</p>
-    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
