updating html to match hw assignment from week 1

--- a/index.html
+++ b/index.html
@@ -1,63 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <title>Cecilia's Bootstrap Portfolio</title>
+    <title> About | Cecilia Leon</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
 </head>
 
 <body>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html" id="logo">Cecilia Leon</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
 
-    <nav class="navbar navbar-expand-lg bg-light">
-        <a class="navbar-brand" href="#">Cecilia Leon</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">About<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Portfolio</a>
-                <a class="nav-item nav-link" href="#">Contact</a>
-            </div>
-        </div>
-    </nav>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <hi>About Me</hi>
 
-    <div class="card">
-        <div class="card-header">
-            About Me
-        </div>
-        <div class="card-body">
-            <blockquote class="blockquote mb-0">
-                <img src="assets/images/cecilia1.png">
-                <p>
-                    I'm a huge animal lover! And yes, I'm that awkward person at the party, who plays with the pets
-                    instead of socializing with the humans. Currently, I have two hamsters, Apple and Dalmation, one
-                    dog, Sage, and a rescued dove, Bubbles. Hopefully in a few months, I'll be welcoming a rescued Chinchilla into the
-                    mix.
-                    Every summer, Sage and I drive up to Montrose Dog Beach once a week to work on her swimming skills.
-                    We are working hard. As of last summer, she began to swim out with me, but if it gets too deep, I become
-                    her human surf board, which results in a ton of small scratches on my arms, shoulders, and legs. One day, Sage
-                    will be an Olympic swimmer if I have anything to do with it!
-                </p>
-                <footer class="blockquote-footer">Copyright©<cite>
-                </footer>
-            </blockquote>
-        </div>
+            <img src="assets/images/cecilia1.png" class="auth-image" alt="Cecilia Leon">
+
+            <p> I'm a huge animal lover! And yes, I'm that awkward person at the party, who plays with the pets
+                instead of socializing with the humans. Currently, I have two hamsters, Apple and Dalmation, one
+                dog, Sage, and a rescued dove, Bubbles. Hopefully in a few months, I'll be welcoming a rescued
+                Chinchilla into the mix.
+            </p>
+            <p>
+                Every summer, Sage and I drive up to Montrose Dog Beach once a week to work on her swimming skills.
+                We are working hard. As of last summer, she began to swim out with me, but if it gets too deep, I become
+                her human surf board, which results in a ton of small scratches on my arms, shoulders, and legs. One
+                day, Sage
+                will be an Olympic swimmer if I have anything to do with it!
+            </p>
+        </section>
     </div>
 
+    <footer>
+        <div class="container">
+            Copyright &copy;
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
-
 </html>
