--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Contact | Cecilia Leon</title>
+
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
 </head>
 
 <body>
-
-    <div class="container" id="box1">
-
-        <nav>
-            <a href="/Basic-Portfolio/contact.html">Contact</a>
-            <a href="/Basic-Portfolio/porfolio.html">Portfolio</a>
-            <a href="/Basic-Portfolio/index.html">About</a>
-        </nav>
-
-        <div class="name">
-            <h1>Cecilia Leon</h1>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html" id="logo">Cecilia Leon</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         </div>
-    </div>
+    </header>
 
-    <div class="container">
+    <div id="main-container" class="container">
+        <section class="main-section">
 
-        <h2>Contact</h2>
+            <hi>Contact</hi>
 
-        <form action="/action_page.php">
-            Name<br>
-            <input type="text" name="firstname" value="">
-            <br>
-            Email<br>
-            <input type="text" name="lastname" value="">
-            <br>
-            Message<br>
-            <input type="text" name="firstname" value="">
-            <br><br>
-            <input type="submit" value="Submit">
-          </form> 
+            <form id="contact-form">
+                <ul>
+                    <li>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Type Your Name" required="required">
+                    </li>
+                    <li>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="Type Your Email" required="required">
+                    </li>
+                    <li>
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" required="required"></textarea>
+                    </li>
+                </ul>
+                <input type="submit">
+            </form>
+        </section>
     </div>
 
     <footer>
-        <p>Copyright©</p>
+        <div class="container">
+            Copyright &copy;
+        </div>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
