ready for bootstrap

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <div id="main-container" class="container">
         <section class="main-section">
 
-            <hi>Contact</hi>
+            <h1>Contact</h1>
 
             <form id="contact-form">
                 <ul>
