--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="main-container" class="container">
         <section class="main-section">
-            <hi>About Me</hi>
+            <h1>About Me</h1>
 
             <img src="assets/images/cecilia1.png" class="auth-image" alt="Cecilia Leon">
 
