--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Portfolio | Cecilia Leon</title>
 
-    <<link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
@@ -25,9 +25,7 @@
 
     <div id="main-container" class="container">
         <section class="main-section">
-
-            <hi>Portfolio</hi>
-
+            <h1>Portfolio</h1>
             <div class="life">
                 <img src="assets/images/berkshire.jpeg" alt="Berkshire Bar">
 
@@ -53,7 +51,7 @@
             </div>
 
             <div>
-                <img src="assets/images/sage2.jpg">
+                <img src="assets/images/sage2.jpg" alt="SageAgain">
             </div>
 
         </section>
