starting bootstrap nav bar

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,20 +38,22 @@
                 <h3>Favorite Holiday</h3>
             </div>
 
-            <div>
+            <div class="life">
                 <img src="assets/images/hamster.jpeg" alt="Hamsters">
 
                 <h3>Hamsters</h3>
             </div>
 
-            <div>
+            <div class="life">
                 <img src="assets/images/sage1.jpeg" alt="Sage">
 
                 <h3>Sage</h3>
             </div>
 
-            <div>
+            <div class="life">
                 <img src="assets/images/sage2.jpg" alt="SageAgain">
+
+                <h3>Sage Again!</h3>
             </div>
 
         </section>
