--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 
     <header id="masthead">
 
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="./index.html">Cecilia Leon</a>
+        <div class="container navbar-mine">
+            <a class="navbar-brand" href="./index.html">Cecilia Leon</a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light pull-right">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-        </div>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -35,8 +34,10 @@
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
             </ul>
-        </div>
-        </nav>
+    </div>
+    </nav>
+    </div>
+
 
     </header>
 
