linking hangman game

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,10 @@
         <section class="main-section">
             <h1>Portfolio</h1>
             <div class="life">
-                <img src="assets/images/berkshire.jpeg" alt="Berkshire Bar">
-
-                <h3>Favorite Bar</h3>
+                <img src="assets/images/sage1.jpeg" alt="Word Guess Game">
+                
+                <a href="https://leoncecilia17.github.io/Word-Guess-Game/"><h3>Word Guess Game</h3></a>
+                
             </div>
 
             <div class="life">
@@ -40,14 +41,13 @@
 
             <div class="life">
                 <img src="assets/images/hamster.jpeg" alt="Hamsters">
-
                 <h3>Hamsters</h3>
             </div>
 
             <div class="life">
-                <img src="assets/images/sage1.jpeg" alt="Sage">
+                <img src="assets/images/berkshire.jpeg" alt="Berkshire Bar">
 
-                <h3>Sage</h3>
+                <h3>Berkshire Bar</h3>
             </div>
 
             <div class="life">
@@ -55,6 +55,9 @@
 
                 <h3>Sage Again!</h3>
             </div>
+
+
+
 
         </section>
     </div>
@@ -65,9 +68,8 @@
         </div>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
