linked berry game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
             </div>
 
             <div class="life">
-                <img src="assets/images/halloween.jpeg" alt="Favorite Holiday">
+                <img src="../Bootstrap-Portfolio/assets/images/download.png" alt="Berry Collector Game">
 
-                <h3>Favorite Holiday</h3>
+                <a href="https://leoncecilia17.github.io/unit-4-game/"><h3>Berry Collector Game</h3></a>
             </div>
 
             <div class="life">
