updated trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,14 +34,14 @@
             </div>
 
             <div class="life">
-                <img src="../Bootstrap-Portfolio/assets/images/download.png" alt="Berry Collector Game">
+                <img src="../Bootstrap-Portfolio/assets/images/download.png">
 
                 <a href="https://leoncecilia17.github.io/unit-4-game/"><h3>Berry Collector Game</h3></a>
             </div>
 
             <div class="life">
-                <img src="assets/images/hamster.jpeg" alt="Hamsters">
-                <h3>Hamsters</h3>
+                <img src="./assets/images/chicagogame.png">
+                <a href= "https://leoncecilia17.github.io/TriviaGame/"> <h3>Trivia Game</h3>
             </div>
 
             <div class="life">
