--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <section class="main-section">
             <h1>Portfolio</h1>
             <div class="life">
-                <img src="assets/images/sage1.jpeg" alt="Word Guess Game">
+                <img src="assets/images/sage1.jpeg">
                 
                 <a href="https://leoncecilia17.github.io/Word-Guess-Game/"><h3>Word Guess Game</h3></a>
                 
@@ -45,9 +45,8 @@
             </div>
 
             <div class="life">
-                <img src="assets/images/berkshire.jpeg" alt="Berkshire Bar">
-
-                <h3>Berkshire Bar</h3>
+                <img src="./assets/images/pastries.jpg">
+                <a href="https://leoncecilia17.github.io/GifTastic/"><h3>Pastry Gifs</h3>
             </div>
 
             <div class="life">
