--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
             <div class="life">
                 <img src="./assets/images/chicagogame.png">
-                <a href= "https://leoncecilia17.github.io/TriviaGame/"> <h3>Trivia Game</h3>
+                <a href= "https://leoncecilia17.github.io/TriviaGame/"><h3>Trivia Game</h3>
             </div>
 
             <div class="life">
@@ -50,13 +50,9 @@
             </div>
 
             <div class="life">
-                <img src="assets/images/sage2.jpg" alt="SageAgain">
-
-                <h3>Sage Again!</h3>
+                <img src="./assets/images/train.jpg">
+                <a href="https://leoncecilia17.github.io/TrainActivity/"><h3>Train Activity!</h3>
             </div>
-
-
-
 
         </section>
     </div>
