linked bamazon activity

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,13 @@
                 <a href="https://leoncecilia17.github.io/TrainActivity/"><h3>Train Activity!</h3>
             </div>
 
+            <div class="life">
+                <img src="./assets/images/mysql.bamazon.png">
+                
+                <a href="https://youtu.be/pljztROyUFw"><h3>MySQL and Node Bamazon Application</h3></a>
+                
+            </div>
+
         </section>
     </div>
 
