updated clicky game

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,14 @@
                     <h3>Make Your Own Burger</h3>
                 </a>
             </div>
+
+            <div class="life">
+                <img src="./assets/images/clickygame.png">
+
+                <a href="https://leoncecilia17.github.io/clickygame/">
+                    <h3>Dog Breed Clicky Game</h3>
+                </a>
+            </div>
         </section>
     </div>
 
