linked scraper hw to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,14 @@
                     <h3>Dog Breed Clicky Game</h3>
                 </a>
             </div>
+
+            <div class="life">
+                <img src="./assets/images/scrape.png">
+
+                <a href="https://scrape-cosmopolitan.herokuapp.com/">
+                    <h3>Cosmopolitan Scraper</h3>
+                </a>
+            </div>
         </section>
     </div>
 
